# deadlock-matches

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  cliff.toml  justfile  pyproject.toml
.claude/skills/deadlock-matches/: SKILL.md
.claude/skills/deadlock-matches/references/: schema-caveats.md
.github/workflows/: test.yml
docs/: commands.md  data.md
notebooks/: getting_started.py  hero_damage.py
protos/: README.md  citadel_gcmessages_server.proto  citadel_usermessages.proto  source2_steam_stats.proto
src/deadlock_matches/: __init__.py  abilities.py  api.py  asset_tables.py  assets.py  config.py  damage.py  engine.py  export.py  extract.py  heroes.py  history.py  items.py  meta.py  paths.py  players.py  queries.py  schemas.py  skill_rating.py  statues.py  timeline.py
src/deadlock_matches/agent/claude/deadlock-matches/: SKILL.md
src/deadlock_matches/agent/skills/deadlock-matches/: SKILL.md
src/deadlock_matches/assets/: abilities.py  accolades.py  heroes.py  history.py  items.py  skill_rating.py  snapshots.py  statues.py  store.py  unnest.py
src/deadlock_matches/assets/data/: abilities.json  ability_history.parquet  hero_history.parquet  item_history.parquet  items.json  skill_rating.json
src/deadlock_matches/cli/: __init__.py  cards.py  data.py  items.py  main.py  meta.py  performance.py
src/deadlock_matches/data/: abilities.json  ability_history.parquet  accolades.json  hero_history.parquet  heroes.json  item_history.parquet  items.json  rank_history.parquet  statue_history.parquet  statues.json
src/deadlock_matches/queries/: __init__.py  core.py  delivery.py  games.py  intervals.py  items.py  laning.py  movement.py  records.py  scaling.py  stats.py
tests/: builders.py  conftest.py  test_abilities.py  test_api.py  test_asset_tables.py  test_assets.py  test_cli.py  test_config.py  test_damage.py  test_export.py  test_extract.py  test_heroes.py  test_history.py  test_items.py  test_meta.py  test_notebook.py  test_paths.py  test_players.py  test_queries.py  test_queries_core.py  test_queries_delivery.py  test_queries_games.py  test_queries_intervals.py  test_queries_items.py  test_queries_laning.py  test_queries_movement.py  test_queries_records.py  test_queries_scaling.py  test_queries_stats.py  test_schemas.py  test_skill_rating.py  test_statues.py  test_store.py  test_timeline.py  test_unnest.py
